--- a/components/sections/About/About.css
+++ b/components/sections/About/About.css
@@ -265,7 +265,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .ox-about {
     padding: 75px var(--margin-lateral) 50px;
   }
