--- a/components/sections/Realisations/Realisations.css
+++ b/components/sections/Realisations/Realisations.css
@@ -507,7 +507,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .ox-realisations {
     padding: 50px var(--margin-lateral);
   }
