--- a/components/sections/Services/Services.css
+++ b/components/sections/Services/Services.css
@@ -41,7 +41,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .ox-services {
     padding: 50px var(--margin-lateral);
   }
